# algo_spectrum

./: .buildinfo  .gitignore  README.md  algorithms.html  algorithms.searching.html  algorithms.sorting.html  data_structures.html  data_structures.node.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tests.algorithms.html  tests.algorithms.test_searching.html  tests.html
.doctrees/: algorithms.doctree  algorithms.searching.doctree  algorithms.sorting.doctree  data_structures.doctree  data_structures.node.doctree  environment.pickle  index.doctree  modules.doctree  tests.algorithms.doctree  tests.algorithms.test_searching.doctree  tests.doctree
.doctrees/contents/: algorithms.doctree  data_structure.doctree
.github/workflows/: docs.yaml  hello.yaml
_modules/: index.html
_modules/algorithms/: searching.html  sorting.html
_modules/data_structures/: node.html
_sources/: algorithms.sorting.rst.txt  data_structures.rst.txt  index.rst.txt
algo_spectrum/: __init__.py  __main__.py
algo_spectrum/algorithms/: searching.py
algorithms/: __init__.py  searching.py  sorting.py
contents/: algorithms.html  data_structure.html
contents/algorithms/: mathematical.html  searching.html  sorting.html
contents/data_structure/: array.html  graph.html  linked_list.html  queue.html  stack.html
data_structures/: node.py
docs/: make.bat
docs/source/: algorithms.rst  algorithms.searching.rst  conf.py  data_structures.node.rst  index.rst  modules.rst  tests.algorithms.rst  tests.rst  (+1 more)
(+42 files in other folders)
