[tool.poetry]
name = "algo-spectrum"
version = "0.1.0"
description = ""
authors = ["Supreet Praharaj <supreet.praharaj.pro@gmail.com>"]
readme = "README.md"
packages = [{include = "algo_spectrum"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
